// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Context Default 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With Image 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://api-staging.coorpacademy.com/api-service/medias?h=400&w=400&q=90&url=https://static.coorpacademy.com/content/CoorpAcademy/content/cockpitRecette-joan/default/corbeau-1501504511632.jpg",
      }
    }
    style={
      Array [
        Object {
          "height": NaN,
          "width": NaN,
        },
        Array [
          Object {
            "height": 200,
            "marginLeft": "auto",
            "marginRight": "auto",
            "width": 200,
          },
          Object {
            "height": 180,
            "width": 320,
          },
        ],
      ]
    }
    testID="context-image"
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With PDF 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content/cockpit-mooc-technique/raw/hierachie-contenu-1494494029567.pdf",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "width": "45%",
            }
          }
          testID="preview-pdf"
        >
          <View
            style={
              Object {
                "alignSelf": "center",
              }
            }
            testID="preview-pdf-icon"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="45"
              bbWidth="45"
              color="#FFFFFF"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  undefined,
                  false,
                  Object {
                    "flex": 0,
                    "height": 45,
                    "width": 45,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGPath
                d="M0 0h24v24H0z"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth="1"
                x={0}
                y={0}
              />
              <RNSVGGroup
                fill={
                  Array [
                    0,
                    1,
                    1,
                    1,
                    1,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                font={Object {}}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth="1"
                x={0}
                y={0}
              >
                <RNSVGPath
                  d="M5 3h10v4h4v1h2V5.586L16.414 1H5c-1.103 0-2 .898-2 2v5h2V3zM19 21H5v-1H3v1c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-1h-2v1zM9 10v8h2c2.206 0 4-1.794 4-4s-1.794-4-4-4H9zm4 4c0 1.103-.897 2-2 2v-4c1.103 0 2 .898 2 2zM22 12v-2h-4c-1.103 0-2 .898-2 2v6h2v-3h3v-2h-3v-1h4zM4 16h1c1.654 0 3-1.346 3-3s-1.346-3-3-3H2v8h2v-2zm0-4h1a1.001 1.001 0 0 1 0 2H4v-2z"
                  fill={
                    Array [
                      0,
                      0,
                      0,
                      0,
                      1,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={Array []}
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth="1"
                  x={0}
                  y={0}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              Object {
                "height": 24,
                "width": 24,
              }
            }
          />
          <View
            testID="button-open-pdf"
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "transparent",
                  "borderColor": "#FFFFFF",
                  "borderRadius": 32,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "height": 54,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "opacity": 1,
                }
              }
              testID="button-open-pdf-native"
            >
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "flex": 1,
                      "fontSize": 18,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 17,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#546E7A",
                      },
                      undefined,
                      Object {
                        "color": "#FFFFFF",
                      },
                      undefined,
                      undefined,
                    ],
                  ]
                }
              >
                Open
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With Video 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <Mock$ReactNavigation$NavigationEvents
    onWillBlur={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#14171A",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
        },
      ]
    }
    testID="video-container"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://player.vimeo.com/external/266296552.m3u8?s=316e71edf867847e1f648655833e41cce19da389&oauth2_token_id=411503075",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="preview-video"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="70"
            bbWidth="70"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 70,
                  "width": 70,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With badly formatted video 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context Without Layout 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Better now
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
          <Image
            source={
              Object {
                "uri": "gr\\\\",
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "height": 200,
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": 200,
                  },
                  Object {},
                ],
                Object {
                  "height": 200,
                  "resizeMode": "cover",
                  "width": 200,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#00B0FF",
                },
                undefined,
              ],
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;
